<resources>
    <string name="app_name">Eine Liebe</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="allgemeineInformationenÜberschrift1" >ALLGEMEINE INFORMATIONEN</string>
    <string name="allgemeineInformationenText1">Das Kartell der Liebe, entstanden aus dem No Stress-Gedanken, steht für eine Null-Toleranz-Einstellung gegenüber jedweder körperlichen oder psychischen Aggression, respektlosen Verhalten oder groben Verstößen gegen die Regeln unseres Festivals. Wir wollen zusammen mit allen Festivalbesuchern bei EINE LIEBE eine positive Atmosphäre schaffen, die sich gegen Hass, Rassismus, Sexismus, Homophobie und anderweitige Ressentiments und Ausgrenzung stellt. Auch appellieren wir an dieser Stelle an unsere Verbundenheit zur Natur: Bitte achtet auf dieses wunderschöne Fleckchen, das wir für unser Festival auserkoren haben. Macht nichts kaputt und werft vor allem keinen Müll oder Sonstiges in die Bachläufe, Wälder und Felder.\n\n
Um gemeinsam ein unvergleichliches und stressfreies Festival-Wochenende zu haben, gilt während der gesamten Veranstaltung unsere Hausordnung. Die Hausordnung und das Sicherheitskonzept wurde gemeinsam mit der Polizei, der Feuerwehr, dem Sanitätsdienst, der Gemeinde Herdwangen-Schönach und dem Landratsamt erstellt, um uns allen ein friedliches und sicheres Festival zu ermöglichen.\n\n
Manche Dinge mögen Euch vielleicht etwas unentspannt, geradezu „kommerziell“ vorkommen, doch gibt es für diese Regeln und Vorgaben ganz bestimmte Gründe: Seit einiger Zeit merken wir alle mehr und mehr, dass die Welt eine andere geworden ist und zu Recht die wichtigste Frage lautet: „Was tut ein Veranstalter für die Sicherheit der Besucher?“ Diese Sicherheit steht für uns an erster Stelle!\n\n
Das Sicherheitskonzept bedeutet jedoch leider nicht nur Konsequenzen und Zugeständnisse für uns als Organisatoren, sondern auch für Euch als Besucher. Wir haben uns nach langen Beratungen und unter Abwägung aller Optionen zusammen mit den zuständigen Behörden zu diesen Regelungen entschlossen, um diese gemeinsam mit Euch umzusetzen. Zu Beginn besonders hervorzuheben ist die Anwendung des Jugendschutzgesetzes (JuSchG), welches ihr weiter unten findet und genauso die Anwendung des Betäubungsmittelgesetzes (BtMG).</string>
    <string name="allgemeineInformationenÜberschrift2">FINGER WEG VON DROGEN\n</string>
    <string name="allgemeineInformationenText2">Besitz, Handel und Konsum von Betäubungsmitteln ist für alle Besucher von EINE LIEBE auf dem gesamten Camping- und Veranstaltungsgelände ausdrücklich verboten. Zuwiderhandlungen führen zum Ausschluss vom Festival sowie zur Benachrichtigung der Polizei. Bei Jugendlichen unter 18 Jahren erfolgt unverzüglich die Benachrichtigung der Erziehungsberechtigten.</string>
    <string name="allgemeineInformationenÜberschrift3">NOTFÄLLE\n</string>
    <string name="allgemeineInformationenText3">Bei Verletzungen oder sonstigen Notfällen ist unser Sanitätsdienst über das gesamte Wochenende durchgehend - auch in der Nacht - für Euch da. Die genaue Position des Sanitäter-Zelts entnehmt bitte dem Geländeplan.
        Neben den Sanitätern ist auch unser Sicherheitsdienst durchgehend auf dem Gelände anzutreffen. Bitte zögert nicht, sobald Euch etwas komisch vorkommt, Meldung zu machen. Auch wenn Ihr Euch nicht sicher seid, dass es tatsächlich ein Notfall ist.\n</string>
    <string name="allgemeineInformationenText4">Wie überall können Notfälle zu jeder Zeit auch direkt via 110 oder 112 aufgegeben werden.\n</string>
    <string name="anreiseInformationenÜberschrift1">Anreise\n</string>
    <string name="anreiseInformationenÜberschrift2">MIT DEM AUTO\n</string>
    <string name="anreiseInformationenText1">Bitte achtet im Vorfeld Eurer Anreise auf alle aktuellen Anfahrtshinweise, die wir über unsere EINE LIEBE Facebookseite und E-Mail kommunizieren. Vor Ort ist die Verkehrs- und die Festivalbeschilderung zu beachten. Von uns abgesperrte Straßen sind vor allem aus Sicherheitsgründen als Rettungswege wichtig für unser gemeinsames Festival, eine Anreise ist nur über die ausgeschilderte Zufahrt möglich. Schleichwege bringen Euch und uns gar nichts. Wir wollen Euch nicht ärgern, sondern dafür sorgen, dass Ihr schnell und sicher beim EINE LIEBE ankommt. Helft uns dabei!\n\n
        Die Parkplatz-Zufahrt befindet sich auf der L195 von Herdwangen in Richtung Überlingen/Owingen, ca. 800m vom Ortsausgang Vorstadt entfernt. Am besten ihr gebt in eurem Navi folgende Adresse ein und folgt von dort aus der Beschilderung:\n\n


        Bodenseestraße\n
        88634 Herdwangen-Schönach\n\n

        Alternativ könnt ihr auch folgende Koordinaten bei GoogleMaps oder anderen Karten-Diensten eingeben:\n
        47.8476, 9.1717\n\n

        Und für die ganz Modernen unter Euch:\n
        ///birke.dichterin.jugendliebe\n\n</string>
    <string name="anreiseInformationenÜberschrift3">UNWETTER\n</string>
    <string name="anreiseInformationenText2">Sollte der Parkplatz bei An- oder Abreise durch anhaltenden Regen sehr nass geworden sein, bitten wir Euch, so vorsichtig wie es geht über diese Flächen zu fahren. Bitte befolgt immer die Anweisungen unserer Einweiser und habt Geduld, sollte es wider Erwarten zu Verzögerungen bei der An- oder Abreise kommen.
        Wetterbedingt kann es passieren, dass sich Autos festgefahren haben. In diesem Fall tun wir unser Möglichstes, um alle Betroffenen mit einem Traktor abzuschleppen. Präpariert Euren Wagen mit dem Abschlepphaken, schaltet die Warnblinkanlage an und habt etwas Geduld, denn: wenn es wirklich nass ist, muss bei jedem Abschleppen behutsam vorgegangen werden. Wir können leider nicht alle auf einmal rausziehen. Wir übernehmen keine Haftung für das Abschleppen von Fahrzeugen. Der Abschleppvorgang erfolgt auf eigene Verantwortung und Gefahr des Besuchers.\n\n

        Wichtiger Hinweis:\n
        Umso weniger Autos – desto besser. Neben dem Appell Fahrgemeinschaften zu bilden noch folgende Information: Aufgrund des kurzfristigen Locationwechsels haben wir keinen befestigten Parkplatz. Allerdings steht uns ein Feld zur Verfügung, welches wir als Parkplatz nutzen dürfen. Je nach Wetter kann es hier also schnell schlammig werden und man muss mit Schwierigkeiten bei der An- und Abreise mit dem Auto rechnen. Lasst Euch also im besten Fall zum Festival fahren oder nutzt die öffentlichen Verkehrsmittel - genauer gesagt den Bus. </string>
    <string name="anreiseInformationenÜberschrift4">MIT BUS UND BAHN\n</string>
    <string name="anreiseInformationenText3">Das Kartell freut sich sehr über jede Anreise, die mit öffentlichen Verkehrsmitteln erfolgt. Die nächsten Bahnhof-Stationen sind Überlingen und Sigmaringen. Von dort aus gelangt ihr einfach und direkt mit dem Bus nach Herdwangen.\n\n

        An der Haltestelle Herdwangen Bodenseestraße halten die folgenden Buslinien:\n

        ❥ Bus 500 (naldo)\n
        Sigmaringen - Pfullendorf - Überlingen\n\n

        ❥ Bus 7378 (bodo)\n
        Überlingen - Owingen - Herdwangen - Pfullendorf\n\n

        ❥ Bus 7389 (bodo)\n
        Überlingen - Sipplingen - Ludwigshafen - Stockach\n\n

        Von der Haltestelle ist man in ca. 10-15 Minuten Fußweg beim Festivalgelände. Der Fußweg ist ausgeschildert.</string>
    <string name="campingÜberschrift">CAMPING-REGELN\n</string>
    <string name="unter18Überschrift1">UNTER 18\n</string>
    <string name="unter18Überschrift2">Informationen für Besucher*innen unter 18 Jahren\n</string>
    <string name="unter18Text">❥ Der Einlass zur Veranstaltung erfolgt bei EINE LIEBE ab 16 Jahren.\n\n
    ❥ Festival-Besucherinnen und Besucher unter 18 Jahren benötigen einen PARTYPASS oder die PARTYPASS-APP und erhalten nach der Personalausweiskontrolle und Vorlage des PARTYPASSES oder der PARTYPASS-APP an der Bändelausgabe einen U18-Bändel.\n
    ❥ Das Veranstaltungsgelände ist aufgeteilt in Campinggelände und Festivalgelände. Beim Betreten des Festivalgeländes geben unter 18 jährige Besucherinnen und Besucher ihren PARTYPASS beim Sicherheitsdienst ab oder checken mit der PARTYPASS-APP ein und holen ihren Ausweis beim Verlassen des Festival-Geländes wieder an gleicher Stelle ab oder checken mit der PARTYPASS-APP aus.\n
    ❥ Festival-Besucherinnen und Besucher unter 18 Jahren müssen das Festivalgelände um 24 Uhr verlassen, dürfen jedoch auf dem Campingplatz ganz normal übernachten.\n
    ❥ Wird ein PARTYPASS nicht abgeholt oder nicht rechtzeitig via PARTYPASS-APP ausgecheckt, wird diese Information zum örtlichen Bürgermeisteramt/Rathaus gebracht und die Eltern werden kontaktiert. Hierbei können Gebühren entstehen – das und den damit verbundenen Ärger solltet ihr um unser und euer aller Willen vermeiden.\n
    ❥ Eine Aufsichtsvollmacht (“MUTTIZETTEL”) wird innerhalb des Festivalgeländes leider nicht akzeptiert. Nach langen Beratungen und unter Abwägung aller Optionen, zusammen mit den zuständigen Behörden, haben wir uns dazu entschlossen, diese Regelungen so einzuführen.\n
    ❥ Bei Vorlage ungültiger/gefälschter Dokumenten wird kein Eintritt zum Festival gewährt und die Polizei informiert.\n
    ❥ Für das gesamte Veranstaltungsgelände inkl. Park- und Campingplatz gilt das Jugendschutzgesetz (JuSchG).</string>
</resources>