<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="WebViewLayout">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/EL2020SchriftDunkel"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="35dp"
                    android:text="@string/allgemeineInformationenÜberschrift1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/EL2020SchriftDunkel"
                    android:padding="25dp"
                    android:text="@string/allgemeineInformationenText1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/EL2020SchriftDunkel"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="35dp"
                    android:text="@string/allgemeineInformationenÜberschrift2"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/EL2020SchriftDunkel"
                    android:padding="25dp"
                    android:text="@string/allgemeineInformationenText2"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/EL2020SchriftDunkel"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="35dp"
                    android:text="@string/allgemeineInformationenÜberschrift3"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/EL2020SchriftDunkel"
                    android:padding="25dp"
                    android:text="@string/allgemeineInformationenText3"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/EL2020SchriftDunkel"
                    android:padding="25dp"
                    android:text="@string/allgemeineInformationenText4"/>
            </LinearLayout>
        </ScrollView>

</layout>