<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="WebViewLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/EL2020SchriftDunkel"
                android:textAlignment="center"
                android:textSize="20dp"
                android:layout_gravity="center_horizontal"
                android:paddingTop="35dp"
                android:text="@string/unter18Überschrift1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/EL2020SchriftDunkel"
                android:textAlignment="center"
                android:textSize="20dp"
                android:layout_gravity="center_horizontal"
                android:paddingTop="35dp"
                android:text="@string/unter18Überschrift2"/>


            <TextView
                android:id="@+id/expandable_text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/EL2020SchriftDunkel"
                android:paddingLeft="25dp"
                android:paddingTop="25dp"
                android:paddingRight="25dp"
                android:text="@string/unter18Text"
                android:paddingBottom="0dp" />
        </LinearLayout>
    </ScrollView>
</layout>